moving roxctl to after build-container

--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -285,7 +285,7 @@ spec:
         - "false"
     - name: roxctl-scan
       runAfter:
-      - clone-repository
+      - build-container
       taskSpec:      
         steps:
          - name: scan
