experimenting with roxctl 3

--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -341,7 +341,7 @@ spec:
            image: redhat/ubi8
            script: |
              #!/bin/sh
-             echo "roxctl-scan: " + $IMAGE_URL
+             echo "roxctl-scan: $IMAGE_URL"
     - name: sast-snyk-check
       params:
       - name: SNYK_SECRET
