--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -330,9 +330,9 @@ spec:
     - name: roxctl-scan
       params:
         - name: rox_central_endpoint
-          value: rox_central_endpoint
+          value: roxsecrets
         - name: rox_api_token
-          value: rox_api_token
+          value: roxsecrets
         - name: output_format
           value: table
         - name: image 
