--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -357,6 +357,8 @@ spec:
             #!/usr/bin/env bash
             set +x
             export NO_COLOR="True"
+            echo "ROX_CENTRAL_ENDPOINT: " + $ROX_CENTRAL_ENDPOINT
+            echo "ROX_API_TOKEN: " + $ROX_API_TOKEN
             curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl  > /dev/null; echo "Getting roxctl"
             chmod +x ./roxctl 
             echo "## Scanning image $(params.image)@$(params.image_digest)"
