--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -359,6 +359,8 @@ spec:
               #!/usr/bin/env bash
               echo "ROX_CENTRAL_ENDPOINT: " + $ROX_CENTRAL_ENDPOINT
               echo "ROX_API_TOKEN: " + $ROX_API_TOKEN
+              jq
+              echo "is jq here?"
               echo "Getting roxctl"
               curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl
               chmod +x ./roxctl 
