--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -343,7 +343,8 @@ spec:
           description: roxctl scan test output
         steps:
           - name: roxctl-image-scan
-            image: redhat/ubi8
+            # image: redhat/ubi8
+            image: quay.io/lrangine/crda-maven:11.0
             env:
               - name: ROX_API_TOKEN
                 valueFrom:
