trying TEST_OUTPUT

--- a/.tekton/partner-catalog-custom-l7yz-push.yaml
+++ b/.tekton/partner-catalog-custom-l7yz-push.yaml
@@ -164,9 +164,9 @@ spec:
     - name: trusted-content
       taskSpec:
         results:
-        - name: CVE_SCAN_RESULT
+        - name: CLAIR_SCAN_RESULT
           description: trusted content scan result
-        - name: HACBS_TEST_OUTPUT
+        - name: TEST_OUTPUT
           description: trusted content output
         workspaces:
           - name: source
@@ -206,10 +206,10 @@ spec:
               high: (.report."high_vulnerabilities"),
               medium: (.report."medium_vulnerabilities"),
               low: (.report."low_vulnerabilities")
-              }}' crda_scan_output.json | tee $(results.CVE_SCAN_RESULT.path)
-              NOTE="Task $(context.task.name) completed: Refer to Tekton task result CVE_SCAN_RESULT for vulnerabilities scanned by CRDA."
-              HACBS_TEST_OUTPUT="SUCCESS $NOTE"
-              echo "${HACBS_TEST_OUTPUT}" | tee $(results.HACBS_TEST_OUTPUT.path)
+              }}' crda_scan_output.json | tee $(results.CLAIR_SCAN_RESULT.path)
+              NOTE="Task $(context.task.name) completed: Refer to Tekton task result CLAIR_SCAN_RESULT for vulnerabilities scanned by CRDA."
+              TEST_OUTPUT="SUCCESS $NOTE"
+              echo "${TEST_OUTPUT}" | tee $(results.TEST_OUTPUT.path)
       runAfter:
         - clone-repository
       workspaces:
