--- a/.tekton/partner-catalog-custom-emau-push.yaml
+++ b/.tekton/partner-catalog-custom-emau-push.yaml
@@ -155,6 +155,23 @@ spec:
         workspace: workspace
       - name: basic-auth
         workspace: git-auth
+    - name: prefetch-dependencies
+      params:
+      - name: input
+        value: $(params.prefetch-input)
+      runAfter:
+      - clone-repository
+      taskRef:
+        bundle: quay.io/redhat-appstudio-tekton-catalog/task-prefetch-dependencies:0.1@sha256:8232d76d919a5b88609abd48c32fae1a91f4c712a49804d0cb80fa6a4b360b48
+        name: prefetch-dependencies
+      when:
+      - input: $(params.hermetic)
+        operator: in
+        values:
+        - "true"
+      workspaces:
+      - name: source
+        workspace: workspace
     - name: trusted-content
       taskSpec:
         results:
@@ -206,23 +223,6 @@ spec:
               echo "${TEST_OUTPUT}" | tee $(results.TEST_OUTPUT.path)
       runAfter:
         - clone-repository
-      workspaces:
-      - name: source
-        workspace: workspace        
-    - name: prefetch-dependencies
-      params:
-      - name: input
-        value: $(params.prefetch-input)
-      runAfter:
-      - clone-repository
-      taskRef:
-        bundle: quay.io/redhat-appstudio-tekton-catalog/task-prefetch-dependencies:0.1@sha256:8232d76d919a5b88609abd48c32fae1a91f4c712a49804d0cb80fa6a4b360b48
-        name: prefetch-dependencies
-      when:
-      - input: $(params.hermetic)
-        operator: in
-        values:
-        - "true"
       workspaces:
       - name: source
         workspace: workspace
@@ -318,22 +318,57 @@ spec:
       workspaces:
       - name: test-ws
         workspace: workspace
-    - name: clair-scan
+    - name: roxctl-scan
       params:
-      - name: image-digest
-        value: $(tasks.build-container.results.IMAGE_DIGEST)
-      - name: image-url
+      - name: image 
         value: $(tasks.build-container.results.IMAGE_URL)
+      - name: image_digest
+        value: $(tasks.build-container.results.IMAGE_DIGEST)
       runAfter:
       - build-container
-      taskRef:
-        bundle: quay.io/redhat-appstudio-tekton-catalog/task-clair-scan:0.1@sha256:12c46e13e8269153a663b4eb02a2f5d5c7b85885306d9091ea530747551362ba
-        name: clair-scan
-      when:
-      - input: $(params.skip-checks)
-        operator: in
-        values:
-        - "false"
+      taskSpec:
+        results:
+        - name: CVE_SCAN_RESULT
+          description: roxctl scan result
+        - name: TEST_OUTPUT
+          description: roxctl scan test output
+        steps:
+          - name: roxctl-image-scan
+            # image: redhat/ubi8
+            image: quay.io/lrangine/crda-maven:11.0
+            env:
+              - name: ROX_API_TOKEN
+                valueFrom:
+                  secretKeyRef:
+                    name: roxsecrets
+                    key: rox_api_token
+              - name: ROX_CENTRAL_ENDPOINT 
+                valueFrom:
+                  secretKeyRef:
+                    name: roxsecrets
+                    key: rox_central_endpoint
+            script: |
+              #!/usr/bin/env bash
+              echo "ROX_CENTRAL_ENDPOINT: " + $ROX_CENTRAL_ENDPOINT
+              echo "ROX_API_TOKEN: " + $ROX_API_TOKEN
+              jq --version
+              echo "is jq here?"
+              echo "Getting roxctl"
+              curl -k -L -H "Authorization: Bearer $ROX_API_TOKEN" https://$ROX_CENTRAL_ENDPOINT/api/cli/download/roxctl-linux --output ./roxctl
+              chmod +x ./roxctl 
+              echo "## Scanning image $(params.image)@$(params.image_digest)"
+              ./roxctl image scan --insecure-skip-tls-verify -e $ROX_CENTRAL_ENDPOINT --image $(params.image)@$(params.image_digest) --output json  > roxctl_output.json
+              more roxctl_output.json
+              jq -rce \
+              '{vulnerabilities:{
+              critical: (.result.summary.CRITICAL),
+              high: (.result.summary.IMPORTANT),
+              medium: (.result.summary.MODERATE),
+              low: (.result.summary.LOW)
+              }}' roxctl_output.json | tee $(results.CVE_SCAN_RESULT.path)              
+              echo "## Go to https://$ROX_CENTRAL_ENDPOINT/main/vulnerability-management/image/$(params.image_digest) to check more info"
+              TEST_OUTPUT="Details in the logs"
+              echo "${TEST_OUTPUT}" | tee $(results.TEST_OUTPUT.path)
     - name: sast-snyk-check
       params:
       - name: SNYK_SECRET
