--- a/.tekton/partner-catalog-custom-emau-push.yaml
+++ b/.tekton/partner-catalog-custom-emau-push.yaml
@@ -205,7 +205,7 @@ spec:
                     key: HOST
             script: |
               #!/usr/bin/env bash
-              echo 'ready to scan'
+              echo 'Ready to scan:'
               /crda.sh pom.xml crda_scan_output.json
               echo 'CRDA Scan is completed'
               echo 'Printing scan results'
